' Generated by UML Generator
' Encoded: ZPDFRy8m3CNl-HG-KcsLTkvXWWjQ3qYJGBsRngFMIeiIbyF-VFVL2QEbR8XR_6jU_9wJphsWasvV6__EpG4Txg6iqVk5YEDj9vINRRFc3u8dKx4bADcLDHaJTi6Yizp2fm5u2CiPsmpMlRJPFOAmr3IKg1ioM79DoVs2LvJg5mNPZXfoABJi0Rb3psMMPD79Y9blOt3hnM4fCHAio386i-dGLQkBlWhUM6jrgbMgROFubjj1Sx8fkLLZvrCLRLHpHLMayDJmluYJT35KqLzAl87qgCly8bb0cscyG2VvmZctyer4oVs2Uwyld3OE62TJn4XN4olEkVx-D9vcyF62lYAd-DYorV75fvkcNy_nOPWuoH6OKsFxN-C7
' URL: http://www.plantuml.com/plantuml/uml/ZPDFRy8m3CNl-HG-KcsLTkvXWWjQ3qYJGBsRngFMIeiIbyF-VFVL2QEbR8XR_6jU_9wJphsWasvV6__EpG4Txg6iqVk5YEDj9vINRRFc3u8dKx4bADcLDHaJTi6Yizp2fm5u2CiPsmpMlRJPFOAmr3IKg1ioM79DoVs2LvJg5mNPZXfoABJi0Rb3psMMPD79Y9blOt3hnM4fCHAio386i-dGLQkBlWhUM6jrgbMgROFubjj1Sx8fkLLZvrCLRLHpHLMayDJmluYJT35KqLzAl87qgCly8bb0cscyG2VvmZctyer4oVs2Uwyld3OE62TJn4XN4olEkVx-D9vcyF62lYAd-DYorV75fvkcNy_nOPWuoH6OKsFxN-C7
' Generated on: 2026-04-13T10:09:12.352468500

@startuml
skinparam classAttributeIconSize 0
hide circle

class Audio {
  +Audio(id: String, title: String, audio: File)
  +Audio(id: String, title: String, audioPath: String)
  +generateFingerprint(): AudioFingerprint
}

abstract class Media {
  -id: String
  -title: String
  -file: File
  --
  +Media(id: String, title: String, file: File)
  +getId(): String
  +getTitle(): String
  +getFile(): File
  +generateFingerprint(): Fingerprint
}

class Video {
  -videoId: String
  -videoTitle: String
  -video: File
  --
  +Video(id: String, title: String, video: File)
  +Video(id: String, title: String, videoPath: String)
  +generateFingerprint(): VideoFingerprint
  +getVideoId(): String
  +getVideoTitle(): String
  +getVideo(): File
  +videoHasher(): void
}

Audio --|> Media
Video --|> Media
@enduml